fix kwt:add padding bottom to title in arabic (text not showing properly)
git-svn-id: https://win-lhoa5a3q3i7/svn/front-end-backup/trunk@7623 3f25d8b1-e65f-8d48-bd54-75b34d8be7f1

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2754,3 +2754,8 @@ md-chips.custom-chips {
   }
 }
 
+html.rtl {
+  .pb-5 {
+    padding-bottom: 5px;
+  }
+}
